# Gomoku

./: .gitignore  CMakeLists.txt  Gomoku  README.md
includes/: AI.hpp  Board.hpp  Enums.hpp  GraphSwitch.hpp  Heuristic.hpp  Human.hpp  IGraphicHandler.hpp  IPlayer.hpp  RulesChecker.hpp  State.hpp
lib/sfml/: CMakeLists.txt
lib/sfml/incs/: SfmlHandler.hpp
lib/sfml/srcs/: SfmlHandler.cpp
srcs/: AI.cpp  Board.cpp  GraphSwitch.cpp  Heuristic.cpp  Human.cpp  RulesChecker.cpp  State.cpp  main.cpp
